blog/cdk-blog-vpc/cdk.out/cdk-blog-vpc1.template.json
{
  "Resources": {
    "vpcdev122B8E28D": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.101.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/Resource"
      }
    },
    "vpcdev1IngressSubnet1SubnetFC0D9474": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.101.0.0/24",
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1/Subnet"
      }
    },
    "vpcdev1IngressSubnet1RouteTableE52E7218": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1/RouteTable"
      }
    },
    "vpcdev1IngressSubnet1RouteTableAssociationB5E3FF28": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet1RouteTableE52E7218"
        },
        "SubnetId": {
          "Ref": "vpcdev1IngressSubnet1SubnetFC0D9474"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1/RouteTableAssociation"
      }
    },
    "vpcdev1IngressSubnet1DefaultRoute09FF60EA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet1RouteTableE52E7218"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcdev1IGW6087D4EA"
        }
      },
      "DependsOn": [
        "vpcdev1VPCGW24C2D4E0"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1/DefaultRoute"
      }
    },
    "vpcdev1IngressSubnet1EIPAAAA4E9B": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1/EIP"
      }
    },
    "vpcdev1IngressSubnet1NATGatewayB8668F74": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcdev1IngressSubnet1EIPAAAA4E9B",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcdev1IngressSubnet1SubnetFC0D9474"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet1/NATGateway"
      }
    },
    "vpcdev1IngressSubnet2SubnetF0D0F022": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.101.1.0/24",
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2/Subnet"
      }
    },
    "vpcdev1IngressSubnet2RouteTableEED9DF52": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2/RouteTable"
      }
    },
    "vpcdev1IngressSubnet2RouteTableAssociation4ADCEB31": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet2RouteTableEED9DF52"
        },
        "SubnetId": {
          "Ref": "vpcdev1IngressSubnet2SubnetF0D0F022"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2/RouteTableAssociation"
      }
    },
    "vpcdev1IngressSubnet2DefaultRoute5D5F657D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet2RouteTableEED9DF52"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcdev1IGW6087D4EA"
        }
      },
      "DependsOn": [
        "vpcdev1VPCGW24C2D4E0"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2/DefaultRoute"
      }
    },
    "vpcdev1IngressSubnet2EIPB67D28A7": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2/EIP"
      }
    },
    "vpcdev1IngressSubnet2NATGateway77F534EB": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcdev1IngressSubnet2EIPB67D28A7",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcdev1IngressSubnet2SubnetF0D0F022"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IngressSubnet2/NATGateway"
      }
    },
    "vpcdev1ApplicationSubnet1Subnet968B711D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.101.2.0/24",
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet1/Subnet"
      }
    },
    "vpcdev1ApplicationSubnet1RouteTable1879050E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet1/RouteTable"
      }
    },
    "vpcdev1ApplicationSubnet1RouteTableAssociation4E29E30C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1ApplicationSubnet1RouteTable1879050E"
        },
        "SubnetId": {
          "Ref": "vpcdev1ApplicationSubnet1Subnet968B711D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet1/RouteTableAssociation"
      }
    },
    "vpcdev1ApplicationSubnet1DefaultRoute6DD6AF80": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1ApplicationSubnet1RouteTable1879050E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcdev1IngressSubnet1NATGatewayB8668F74"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet1/DefaultRoute"
      }
    },
    "vpcdev1ApplicationSubnet2SubnetF64D6EF3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.101.3.0/24",
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet2/Subnet"
      }
    },
    "vpcdev1ApplicationSubnet2RouteTable09009088": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet2/RouteTable"
      }
    },
    "vpcdev1ApplicationSubnet2RouteTableAssociationDD4E58D6": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1ApplicationSubnet2RouteTable09009088"
        },
        "SubnetId": {
          "Ref": "vpcdev1ApplicationSubnet2SubnetF64D6EF3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet2/RouteTableAssociation"
      }
    },
    "vpcdev1ApplicationSubnet2DefaultRouteD0972B52": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1ApplicationSubnet2RouteTable09009088"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcdev1IngressSubnet2NATGateway77F534EB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/ApplicationSubnet2/DefaultRoute"
      }
    },
    "vpcdev1IGW6087D4EA": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc1/vpc-dev1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/IGW"
      }
    },
    "vpcdev1VPCGW24C2D4E0": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "InternetGatewayId": {
          "Ref": "vpcdev1IGW6087D4EA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc1/vpc-dev1/VPCGW"
      }
    }
  },
  "Outputs": {
    "ExportsOutputRefvpcdev122B8E28D3296F345": {
      "Value": {
        "Ref": "vpcdev122B8E28D"
      },
      "Export": {
        "Name": "cdk-blog-vpc1:ExportsOutputRefvpcdev122B8E28D3296F345"
      }
    }
  }
}
