blog/cdk-blog-vpc/cdk.out/cdk-blog-vpc2.template.json
{
  "Resources": {
    "vpcdev2A6F85476": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.56.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/Resource"
      }
    },
    "vpcdev2IngressSubnet1Subnet423F170D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.56.0.0/24",
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1/Subnet"
      }
    },
    "vpcdev2IngressSubnet1RouteTable0B7DBFD1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1/RouteTable"
      }
    },
    "vpcdev2IngressSubnet1RouteTableAssociation5360480B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2IngressSubnet1RouteTable0B7DBFD1"
        },
        "SubnetId": {
          "Ref": "vpcdev2IngressSubnet1Subnet423F170D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1/RouteTableAssociation"
      }
    },
    "vpcdev2IngressSubnet1DefaultRouteE8A640F2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2IngressSubnet1RouteTable0B7DBFD1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcdev2IGW5BAB27B0"
        }
      },
      "DependsOn": [
        "vpcdev2VPCGWE2A738B2"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1/DefaultRoute"
      }
    },
    "vpcdev2IngressSubnet1EIPAD6956B3": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1/EIP"
      }
    },
    "vpcdev2IngressSubnet1NATGatewayE5C5271A": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcdev2IngressSubnet1EIPAD6956B3",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcdev2IngressSubnet1Subnet423F170D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet1/NATGateway"
      }
    },
    "vpcdev2IngressSubnet2Subnet99425F42": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.56.1.0/24",
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2/Subnet"
      }
    },
    "vpcdev2IngressSubnet2RouteTable0E21D54D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2/RouteTable"
      }
    },
    "vpcdev2IngressSubnet2RouteTableAssociation8F62390B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2IngressSubnet2RouteTable0E21D54D"
        },
        "SubnetId": {
          "Ref": "vpcdev2IngressSubnet2Subnet99425F42"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2/RouteTableAssociation"
      }
    },
    "vpcdev2IngressSubnet2DefaultRoute8AC1DC44": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2IngressSubnet2RouteTable0E21D54D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcdev2IGW5BAB27B0"
        }
      },
      "DependsOn": [
        "vpcdev2VPCGWE2A738B2"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2/DefaultRoute"
      }
    },
    "vpcdev2IngressSubnet2EIPF97D7917": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2/EIP"
      }
    },
    "vpcdev2IngressSubnet2NATGatewayDB3230DF": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcdev2IngressSubnet2EIPF97D7917",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcdev2IngressSubnet2Subnet99425F42"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IngressSubnet2/NATGateway"
      }
    },
    "vpcdev2ApplicationSubnet1Subnet21D49758": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.56.2.0/24",
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet1/Subnet"
      }
    },
    "vpcdev2ApplicationSubnet1RouteTableD4C2BBAA": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet1/RouteTable"
      }
    },
    "vpcdev2ApplicationSubnet1RouteTableAssociation187C1414": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2ApplicationSubnet1RouteTableD4C2BBAA"
        },
        "SubnetId": {
          "Ref": "vpcdev2ApplicationSubnet1Subnet21D49758"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet1/RouteTableAssociation"
      }
    },
    "vpcdev2ApplicationSubnet1DefaultRoute3D10735C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2ApplicationSubnet1RouteTableD4C2BBAA"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcdev2IngressSubnet1NATGatewayE5C5271A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet1/DefaultRoute"
      }
    },
    "vpcdev2ApplicationSubnet2Subnet273DB3DD": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.56.3.0/24",
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet2/Subnet"
      }
    },
    "vpcdev2ApplicationSubnet2RouteTable70DF419B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet2/RouteTable"
      }
    },
    "vpcdev2ApplicationSubnet2RouteTableAssociation1F1DAC57": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2ApplicationSubnet2RouteTable70DF419B"
        },
        "SubnetId": {
          "Ref": "vpcdev2ApplicationSubnet2Subnet273DB3DD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet2/RouteTableAssociation"
      }
    },
    "vpcdev2ApplicationSubnet2DefaultRouteD9B44333": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev2ApplicationSubnet2RouteTable70DF419B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcdev2IngressSubnet2NATGatewayDB3230DF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/ApplicationSubnet2/DefaultRoute"
      }
    },
    "vpcdev2IGW5BAB27B0": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc2/vpc-dev2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/IGW"
      }
    },
    "vpcdev2VPCGWE2A738B2": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev2A6F85476"
        },
        "InternetGatewayId": {
          "Ref": "vpcdev2IGW5BAB27B0"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc2/vpc-dev2/VPCGW"
      }
    }
  }
}
